--- a/CSS/invoice-styling.css
+++ b/CSS/invoice-styling.css
@@ -149,16 +149,118 @@ li a:hover {
     background-color: black;
     color: white;
 }
+table{
+    position: absolute;
+    top: 130px;
+    left: 315px;
+    right: 200px;
+    /* bottom:200px; */
+    width: 74%;
+    text-align: center;
+ }
+ 
+ table,th{
+     color: white;
+     border: 2px solid black;
+     border-collapse: collapse;
+     padding: 8px;
+ }
+ 
+ tr,td{
+     color: black;
+     border: 2px solid black;
+     border-collapse: collapse;
+     padding: 8px;
+ }
+ 
+ th{
+     background-color: black;
+ }
 
-
-
-
-.sales{
+ #Box{
+    display: none;
     position: fixed;
-    top: 200px;
-    left: 400px;
+    min-width: 100%;
+    min-height: 100%;
+    background-color: rgba(255, 255, 255, 0.5);
+    z-index:10;
+}
+.New-Box{
+    margin-left: auto;
+    margin-right: auto;
     background-color: black;
     color: white;
-    padding: 80px 80px;
-    border-radius: 10px;
+    width: 40%;
+    height: 70%;
+    top: 40vh;
+    border-radius: 20px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    position: relative;
+    z-index:11;
+}
+
+.New-Item span{
+    background-color: rgb(7, 52, 186);
+    text-decoration: none;
+    border-radius: 5px;
+    text-align: center;
+    color: white;
+    padding: 10px 20px ;
+    position: fixed;
+    top: 650px;
+    left: 1335px;
+    bottom: 20px;
+    cursor: pointer;
+}
+
+.New-Item span:link, span:visited{
+    color: white;
+    padding: 10px 16px ;
+    text-align: center;
+    text-decoration: none;
+} 
+
+.New-Item span:hover {
+    background-color: rgb(4, 131, 10);
+    color: white;
+}
+
+.New-Customer span{
+    background-color: rgb(7, 52, 186);
+    text-decoration: none;
+    border-radius: 5px;
+    text-align: center;
+    color: white;
+    padding: 10px 20px ;
+    position: fixed;
+    top: 650px;
+    left: 120px;
+    bottom: 20px;
+    cursor: pointer;
+}
+
+.New-Customer span:link, span:visited{
+    color: white;
+    padding: 10px 16px ;
+    text-align: center;
+    text-decoration: none;
+} 
+
+.New-Customer span:hover {
+    background-color: rgb(4, 131, 10);
+    color: white;
+}
+
+.verified {
+    animation: fadeInAnimation ease 3s;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards;
+}
+@keyframes fadeInAnimation {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
 }
